--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -171,7 +171,6 @@ h1{
 }
 #main-content{
 	@media #{$tablet}{
-		padding: 0;
 		margin-bottom: $lineheight-base * 4;
 	}
 }
