--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -23,9 +23,16 @@ nav{
 	position: fixed;
 }
 
-main{
+main, .main{
 	padding-left: 1rem;
 	padding-right: 1rem;
+}
+
+main{
+	@media #{$tablet}{
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 @media #{$tablet}{
 	header{
